# self-driving-comps

./: .gitignore  Dockerfile.quanser  README.md  additional_setup.md
Development/ros2/install/: local_setup.sh  setup.sh
Development/ros2/install/qcar2_interfaces/share/qcar2_interfaces/: package.sh
Development/ros2/install/qcar2_nodes/lib/qcar2_nodes/: command  nav2_qcar2_converter
Development/ros2/install/qcar2_nodes/share/ament_index/resource_index/parent_prefix_path/: qcar2_nodes
Development/ros2/install/qcar2_nodes/share/qcar2_nodes/: local_setup.sh  package.sh
Development/ros2/install/qcar_wasd_controller/lib/qcar_wasd_controller/: wasd_teleop
Development/ros2/install/qcar_wasd_controller/share/qcar_wasd_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Development/ros2/log/: latest_build
Development/ros2/src/qcar2_nodes/: CMakeLists.txt
Development/ros2/src/qcar2_nodes/launch/: qcar2_cartographer_virtual_launch.py  qcar2_slam_and_nav_bringup_virtual_launch.py  qcar2_virtual_launch.py
Development/ros2/src/qcar2_nodes/src/: lidar.cpp  qcar2_hardware.cpp
Development/ros2/src/qcar_wasd_controller/: setup.cfg
Development/ros2/src/qcar_wasd_controller/qcar_wasd_controller/: wasd_teleop.py
bag/rosbag2_2025_04_09-17_46_51/: metadata.yaml
docker/: Dockerfile.quanser
ros2/src/qcar2_nodes/: CMakeLists.txt
ros2/src/qcar2_nodes/launch/: qcar2_virtual_launch.py
ros2/src/qcar2_nodes/src/: csi.cpp  qcar2_hardware.cpp  rgbd.cpp
ros2/src/qcar2_nodes/urdf/: qcar2.urdf
ros2/src/qcar_controller/: CMakeLists.txt  package.xml
ros2/src/qcar_controller/src/: logitech_g923_controller.py  test_logitech_g923.py  wasd_teleop.py
ros2/src/qcar_wasd_controller/: setup.py
